--- a/platformio.ini
+++ b/platformio.ini
@@ -27,9 +27,9 @@ build_type = release
 ;lib_extra_dirs =
 ;	~/Projects2
 lib_deps =
-	og3@0.2.1
-	og3x-oled@0.2.0
-	og3x-shtc3@0.2.0
+	og3@0.2.2
+	og3x-oled@^0.2.2
+	og3x-shtc3@^0.2.0
 	adafruit/Adafruit BusIO
 	adafruit/Adafruit SHTC3 Library
 	bblanchon/ArduinoJson@^7.0.0
