--- a/platformio.ini
+++ b/platformio.ini
@@ -25,7 +25,7 @@ monitor_filters = esp32_exception_decoder
 ;build_type = debug
 build_type = release
 lib_deps =
-	og3@^0.3.90
+	og3@^0.3.96
 	og3x-oled@^0.3.1
 	og3x-shtc3@^0.3.0
 	adafruit/Adafruit BusIO
@@ -34,7 +34,7 @@ lib_deps =
 	bakercp/CRC32
 	bblanchon/ArduinoJson@^7.0.0
 	heman/AsyncMqttClient-esphome@^2.1.0
-	esphome/ESPAsyncWebServer-esphome@^3.0.0
+	ESP32Async/ESPAsyncWebServer @ 3.6.0
 	thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays@^4.6.1
 	Wire
 	SPI
@@ -51,4 +51,6 @@ upload_protocol = ${secrets.uploadProtocol}
 upload_port = ${secrets.uploadPort}
 upload_flags =
 	${secrets.uploadAuth}
+	${secrets.uploadHostPort}
 lib_ldf_mode = deep
+lib_compat_mode = strict
