--- a/platformio.ini
+++ b/platformio.ini
@@ -25,9 +25,9 @@ monitor_filters = esp32_exception_decoder
 ;build_type = debug
 build_type = release
 lib_deps =
-	og3@^0.3.96
-	og3x-oled@^0.3.1
-	og3x-shtc3@^0.3.0
+	chl33/og3@^0.4.3
+	chl33/og3x-oled@^0.3.1
+	chl33/og3x-shtc3@^0.3.0
 	adafruit/Adafruit BusIO
 	adafruit/Adafruit Unified Sensor
 	adafruit/Adafruit SHTC3 Library
@@ -52,5 +52,5 @@ upload_port = ${secrets.uploadPort}
 upload_flags =
 	${secrets.uploadAuth}
 	${secrets.uploadHostPort}
-lib_ldf_mode = deep
+lib_ldf_mode = chain
 lib_compat_mode = strict
