--- a/platformio.ini
+++ b/platformio.ini
@@ -24,18 +24,19 @@ check_tool = clangtidy
 monitor_filters = esp32_exception_decoder
 ;build_type = debug
 build_type = release
-;lib_extra_dirs =
-;	~/Projects2
 lib_deps =
-	og3@0.2.3
-	og3x-oled@^0.2.2
-	og3x-shtc3@^0.2.0
+	chl33/og3@^0.4.3
+	chl33/og3x-oled@^0.3.1
+	chl33/og3x-shtc3@^0.3.0
 	adafruit/Adafruit BusIO
+	adafruit/Adafruit Unified Sensor
 	adafruit/Adafruit SHTC3 Library
+	bakercp/CRC32
 	bblanchon/ArduinoJson@^7.0.0
-	heman/AsyncMqttClient-esphome@^1.0.0
-	esphome/ESPAsyncWebServer-esphome@^3.0.0
-	thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays@^4.2.0
+	heman/AsyncMqttClient-esphome@^2.1.0
+	ESP32Async/ESPAsyncWebServer @ 3.6.0
+	thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays@^4.6.1
+	Wire
 	SPI
 
 build_flags =
@@ -50,4 +51,6 @@ upload_protocol = ${secrets.uploadProtocol}
 upload_port = ${secrets.uploadPort}
 upload_flags =
 	${secrets.uploadAuth}
-lib_ldf_mode = deep
+	${secrets.uploadHostPort}
+lib_ldf_mode = chain
+lib_compat_mode = strict
